Stone Soup 0.5.1 (2009????)
---------------------------

Disclaimer: These are merely the highlights, not an exhaustive list of changes.

* Improved performance for the Tiles version.
* Fixed crashes related to giant spores.
* Fixed monsters refusing to enter or attack into grids on the map edge.
* Fixed minivaults not being placed.
* Fixed summoning decks giving permanent summons at low power.
* Fixed erroneous "blocked line of fire" warnings.
* Fixed missing items in Tiles inventory menus.
* Fixed Xom's repel stairs effect moving shops.
* Fixed certain incorporeal monsters flying instead of levitating.
* Fixed inconvenient electrical eels in entry vaults.
* Fixed magic mapping not showing altars/gates in the Tiles version.
* Fixed AltGr not being recognized in Windows Tiles version.
* Once entered, the gate to Zot remains open even without carrying runes.
* Really allow uniques to retain their spells when polymorphed.
* Improve Yredelemnul's Enslave Soul, no longer uses random resistance checks.
* Mutation attacks disregard magic resistance again.
* Zin gets a power to once per game cure a follower of all mutations.
* Artificers start with 1 MP.
* Prompt before allowing TSO/Lugonu to bless your weapon.
* Vampiric Draining/Drain Life deal damage to summons again, but don't heal.
* Wielding stones for Sandblast now guarantees a range of 2.
* Turn autopickup back on if you gain see invisible, even temporarily.
* Polymorph other always polymorphs shapeshifters whose form isn't magic immune.
* Troll hide and armour count as light armour.
* Let ghouls wear gloves again.
* Wearing a visored helmet prevents biting attacks.
* Some new vaults.
* Tiles: Re-allow selection of player dolls ('-' command).
* Add missing tiles options to the options guide (docs/, '?&' command).
* Use clearer tiles for disturbances in shallow water.
* Document tiles lags in tiles_help.txt and in the in-game FAQ ('?Q' command).

Stone Soup 0.5.0 (20090612)
---------------------------
