@@ -14,6 +14,7 @@ void generate_abyss();
 void area_shift();
 void abyss_teleport(bool new_area);
 void save_abyss_uniques();
+bool is_level_incorruptible();
 bool lugonu_corrupt_level(int power);
 void run_corruption_effects(int duration);
 
