@@ -135,8 +135,9 @@ bool can_wield(item_def *weapon, bool say_why = false,
 /* ***********************************************************************
  * called from: acr
  * *********************************************************************** */
-bool wield_weapon(bool auto_wield, int slot = -1, bool show_we_messages = true,
-                  bool force = false);
+bool wield_weapon(bool auto_wield, int slot = -1,
+                  bool show_weff_messages = true, bool force = false,
+                  bool show_unwield_msg = true);
 
 
 // last updated 12may2000 {dlb}
