@@ -7,15 +7,19 @@ Disclaimer: These are merely the highlights, not an exhaustive list of changes.
 * Fixed crashes related to giant spores.
 * Fixed monsters refusing to enter or attack into grids on the map edge.
 * Fixed minivaults not being placed.
+* Fixed inconvenient electrical eels in entry vaults.
 * Fixed summoning decks giving permanent summons at low power.
 * Fixed erroneous "blocked line of fire" warnings.
 * Fixed missing items in Tiles inventory menus.
 * Fixed Xom's repel stairs effect moving shops.
-* Fixed certain incorporeal monsters flying instead of levitating.
-* Fixed inconvenient electrical eels in entry vaults.
 * Fixed magic mapping not showing altars/gates in the Tiles version.
 * Fixed AltGr not being recognized in Windows Tiles version.
+* Fixed misbehaviour for temporary weapon brands and throwing.
+* Fixed Blade Hands not counting as slicing while wearing melded gloves.
+* Fixed certain incorporeal monsters flying instead of levitating.
 * Once entered, the gate to Zot remains open even without carrying runes.
+* Check some abilities' requirements before rolling the success check.
+* Consider armour properties in fatal stat loss check before transforming.
 * Really allow uniques to retain their spells when polymorphed.
 * Improve Yredelemnul's Enslave Soul, no longer uses random resistance checks.
 * Mutation attacks disregard magic resistance again.
